Scrollbar stepper correction

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -731,15 +731,14 @@ StScrollBar {
 
 /* Calendar page buttons */
 .pager-button {
-	color: white;
+	opacity: 0.7;
 	background-color: transparent;
 	width: 36px;
 	border-radius: 36px; }
 	.pager-button:hover, .pager-button:focus {
-		background-color: rgba(50,50,50,0.9); 
-}
+    	opacity: 0.85; }
 	.pager-button:active {
-		background-color: rgba(3,111,197.85); }
+		opacity: 1; }
 
 .calendar-change-month-back {
 	background-image: url("assets/calendar-arrow-left.svg"); }
@@ -758,16 +757,18 @@ StScrollBar {
 	height: 2.4em;
 	padding: 0.1em;
 	margin: 2px;
-	border-radius: 1.4em;
-	border: none; }
+	border-radius: 0;
+	border: 2px solid transparent; }
 	.calendar-day-base:hover, .calendar-day-base:focus {
-		background-color: rgba(0,0,0,0.85); }
+		margin: 0;
+		background-color: rgba(255,255,255,0.05);
+		border: 2px solid rgba(255,255,255,0.5); }
 	.calendar-day-base:active {
-		color: white;
-		background-color:#026ec4;
-		border-color: transparent; }
+		background-color: rgba(255,255,255,0.1);
+		border: 2px solid rgba(255,255,255,0.7); }
 	.calendar-day-base.calendar-day-heading {
 		color: rgba(255,255,255,0.8);
+	    border: 2px solid transparent;
 		margin-top: 1em;
 		font-size: 70%; }
 
@@ -781,22 +782,35 @@ StScrollBar {
 	border-left-width: 0px; }
 
 .calendar-nonwork-day {
-	background-color: rgba(100,100,100,0.4);
-	color: rgba(255,255,255,0.7); }
+    color: #fff;
+}
 
-.calendar-today {
+.calendar-today,
+.calendar-today:hover,
+.calendar-today:focus,
+.calendar-today:active,
+.calendar-day-base:selected {
 	background-image: none;
 	text-shadow:none;
 	font-weight: bold;
-	background-color: rgba(159, 176, 185, 0.3);
-	border: 0px solid rgba(0,0,0,0.2); }
+    border-radius: 0;
+    box-shadow: inset 0 0 0 2px black;
+    background-color: #026ec4;
+    border: 2px solid #026ec4;
+    margin: 0; }
+    
+.calendar-today:hover {
+    border: 2px solid rgba(255,255,255,0.5);
+}
+.calendar-today:active {
+    border: 2px solid rgba(255,255,255,0.75);
+}
 
 .calendar-day-with-events {
 	color: rgba(0,110,240,0.95);
 	font-weight: bold; }
-
 .calendar-other-month-day {
-	color: rgba(255,255,255,0.8);
+	color: rgba(255,255,255,0.5);
 	opacity: 0.5; }
 
 /* Message list */
@@ -1144,6 +1158,21 @@ StScrollBar {
 	icon-shadow: 0 0 5px 0px #222;
 	color: white;
 }
+/* Windows Start Icon on Dash Apps button */
+.show-apps .overview-icon {
+  background-image: url("assets/view-grid-symbolic.svg") !important;
+  background-size: contain !important;
+}
+.show-apps StWidget,
+.show-apps StWidget:hover,
+.show-apps StWidget:focus,
+.show-apps StWidget:active,
+.show-apps StWidget:checked {
+/*  background-color: transparent !important;*/
+  color: transparent;
+  border-width: 0px;
+  border-radius: 0;
+}
 .dash-item-container > StWidget {
 	padding: 2px 4px;
 }
@@ -1181,7 +1210,7 @@ StScrollBar {
 .app-view-control:hover {
 	color: white;
 	background-gradient-direction: none;
-	background-color: rgba(60,60,250,0.9);
+	background-color: rgba(60,60,60,0.9);
 	border-color: rgba(20,20,20,0.7);
 	border-width: 0px;
 }
@@ -1271,7 +1300,7 @@ StScrollBar {
 .search-provider-icon,
 .list-search-result, .app-well-app .overview-icon,
 .app-well-app.app-folder .overview-icon,
-.show-apps .overview-icon,
+/*.show-apps .overview-icon,*/
 .grid-search-result .overview-icon {
 	color: white;
 	border-radius: 0;
@@ -1284,10 +1313,10 @@ StScrollBar {
 .app-well-app.app-folder > .overview-icon {
 	background-color: rgba(0, 0, 0, 0.7); }
 
-.show-apps:checked .show-apps-icon,
+/*.show-apps:checked .show-apps-icon,
 .show-apps:focus .show-apps-icon {
 	color: white;
-	transition-duration: 100ms; }
+	transition-duration: 100ms; }*/
 
 .app-folder-popup {
 	-arrow-border-radius: 8px;
@@ -1646,7 +1675,7 @@ StScrollBar {
 
 /* On-screen Keyboard */
 #keyboard {
-	background-color: rgba(0,0,0,0.7); }
+	background-color: rgba(20,20,20,0.7); }
 
 .keyboard-layout {
 	spacing: 10px;
@@ -2089,6 +2118,6 @@ StScrollBar {
 	background-color: #026ec4;}
 
 .popup-menu-item:insensitive {
-	color: #4c4c4c;}
+	color: #f1f1f1;}
 	
 /* NOTE: Overlay dialog is a modal dialog, no matter what's displayed */
